fix bug and update doc
